--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,10 @@
 .header__wrapper {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 200px;
   background-color: blueviolet;
+}
+.content__wrapper{
+  height: 160px;
 }
